fixed bug w netAgrees visibility

--- a/less/new.less
+++ b/less/new.less
@@ -60,17 +60,6 @@ a:hover {
     display: inline;
 }
 
-.bottomBorderOnHover:hover {
-/*
-    border-width: 1px;
-    border-bottom-style: solid;
-    padding-bottom: -1px;
-    padding-right:0 !important;
-    margin-right: 4px;
-*/
-}
-
-
 .inlineBlock {
     display: inline-block;
 }
@@ -1371,13 +1360,13 @@ a:visited {
 .fadeStatsWhenZero {
     //opacity: .8;
     color: @grayTextExtraLight;
-    font-weight: normal;
+    //font-weight: normal;
 }
 
 .fadeStatsWhenZero:hover {
     //opacity: .8;
     color: @grayTextMedium;
-    font-weight: bold;
+    //font-weight: bold;
 }
 
 .fadeArrowWhenZero {
